--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
 		"symfony/console" : "~2.3 || ~3.0",
 		"symfony/config" : "~2.3 || ~3.0",
 		"symfony/yaml" : "~2.3 || ~3.0",
-		"kwn/php-rdkafka-stubs" : "^0.0.4",
 		"ext-rdkafka" : "*"
 	},
 	"require-dev" : {
+		"kwn/php-rdkafka-stubs" : "*",
 		"phpunit/phpunit" : "~4.8 || ~5.0"
 	}
 }
